--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"preinstall": "npx npm-force-resolutions"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -37,5 +38,11 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"resolutions": {
+		"react-error-overlay": "6.0.9"
+	},
+	"devDependencies": {
+		"react-error-overlay": "6.0.9"
 	}
 }
