--- a/package.json
+++ b/package.json
@@ -44,5 +44,9 @@
 	},
 	"devDependencies": {
 		"react-error-overlay": "6.0.9"
+	},
+	"engines": {
+		"node": "<=14.x.x",
+		"npm": "<=6.x.x"
 	}
 }
