--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"homepage": "http://mczepan.github.io/facial-recognition-app",
 	"name": "facial-recognition",
 	"version": "0.1.0",
 	"private": true,
@@ -11,10 +12,13 @@
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0",
 		"react-scripts": "4.0.2",
+		"react-tilt": "^0.1.4",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
-		"start": "server -s build",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
+		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
